--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,12 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.1.0'
+    compileOnly 'org.projectlombok:lombok:1.18.28'
+    implementation 'org.postgresql:postgresql:42.6.0'
+
+
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
